--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -5,7 +5,7 @@
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "1d8e9cc1b852cd8ad0c574ecb181930d1d668d46",
+   "rev": "24d8de9da5cf8a1a39a8e7f618548973e4bbe75d",
    "name": "mathlib",
    "manifestFile": "lake-manifest.json",
    "inputRev": null,
@@ -15,10 +15,10 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "ebfb31672ab0a5b6d00a018ff67d2ec51ed66f3a",
+   "rev": "4dfba8b20a5ce570b9ef8bae969dd163782f9793",
    "name": "plausible",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "main",
+   "inputRev": "nightly-testing",
    "inherited": true,
    "configFile": "lakefile.toml"},
   {"url": "https://github.com/leanprover-community/LeanSearchClient",
@@ -35,7 +35,7 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "c96401869916619b86e2e54dbb8e8488bd6dd19c",
+   "rev": "c20832d6f0b3186a97ea9361cec0a5b87dd152a3",
    "name": "importGraph",
    "manifestFile": "lake-manifest.json",
    "inputRev": "main",
@@ -45,17 +45,17 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "a602d13aca2913724c7d47b2d7df0353620c4ee8",
+   "rev": "ea953247aac573c9b5adea60bacd3e085f58aca4",
    "name": "proofwidgets",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "v0.0.53",
+   "inputRev": "v0.0.56",
    "inherited": true,
    "configFile": "lakefile.lean"},
   {"url": "https://github.com/leanprover-community/aesop",
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "ecaaeb0b44a8d5784f17bd417e83f44c906804ab",
+   "rev": "57185dfad68d78356f9462af984882d6f262aa5d",
    "name": "aesop",
    "manifestFile": "lake-manifest.json",
    "inputRev": "master",
@@ -65,7 +65,7 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "d892d7a88ad0ccf748fb8e651308ccd13426ba73",
+   "rev": "aa4c87abed970d9dfad2506000d99d30b02f476b",
    "name": "Qq",
    "manifestFile": "lake-manifest.json",
    "inputRev": "master",
@@ -75,17 +75,17 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "7ad3747bf6cb10bfe96a40186ca8970ee851eb3b",
+   "rev": "a84fc2bf5d32e04d0da6608dc66410f2669a0eae",
    "name": "batteries",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "main",
+   "inputRev": "nightly-testing",
    "inherited": true,
    "configFile": "lakefile.toml"},
   {"url": "https://github.com/leanprover/lean4-cli",
    "type": "git",
    "subDir": null,
    "scope": "leanprover",
-   "rev": "dd423cf2b153b5b14cb017ee4beae788565a3925",
+   "rev": "aff4176e5c41737a0d73be74ad9feb6a889bfa98",
    "name": "Cli",
    "manifestFile": "lake-manifest.json",
    "inputRev": "main",
