--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -5,7 +5,7 @@
    "type": "git",
    "subDir": null,
    "scope": "",
-   "rev": "f31d9cea1d1b6899caa60168268c6126f83d0439",
+   "rev": "8466b91a8eb12b90eb03f36c7fcb67ec516580b9",
    "name": "mathlib",
    "manifestFile": "lake-manifest.json",
    "inputRev": null,
@@ -15,10 +15,10 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "4dfba8b20a5ce570b9ef8bae969dd163782f9793",
+   "rev": "8cee626a680fe217814c4bd444b94ceb31efd6b6",
    "name": "plausible",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "nightly-testing",
+   "inputRev": "main",
    "inherited": true,
    "configFile": "lakefile.toml"},
   {"url": "https://github.com/leanprover-community/LeanSearchClient",
@@ -75,10 +75,10 @@
    "type": "git",
    "subDir": null,
    "scope": "leanprover-community",
-   "rev": "a84fc2bf5d32e04d0da6608dc66410f2669a0eae",
+   "rev": "cad11fb361eda1c05095ea93bc1d63597ea3c24e",
    "name": "batteries",
    "manifestFile": "lake-manifest.json",
-   "inputRev": "nightly-testing",
+   "inputRev": "main",
    "inherited": true,
    "configFile": "lakefile.toml"},
   {"url": "https://github.com/leanprover/lean4-cli",
